--- a/src/locales/it-messages.json
+++ b/src/locales/it-messages.json
@@ -149,6 +149,12 @@
     "options.debugMode": {
         "message": "Abilita modalità di debug"
     },
+    "options.deepseek.apiKey": {
+        "message": "Chiave API*"
+    },
+    "options.deepseek.apiKey.description": {
+        "message": "Vai nella <a href=\"https://platform.deepseek.com/api_keys\">DeepSeek Platform</a> per recuperare o creare una chiave."
+    },
     "options.errorOwlForExchangeBug": {
         "message": "<b>ATTENZIONE</b>: Sembra che almeno uno dei tuoi account usi l'estensione Owl for Exchange (Gufo per Exchange), che ha un bug con le <a href=\"https://webextension-api.thunderbird.net/en/115/messageDisplayScripts.html\">messageDisplayScripts API ufficiali di Thunderbird</a>.<br>Questo impedirà all'estensione di \"AI Mail Support\" di funzionare quando si lavora su account Exchange od Office365."
     },
