Continuation of Work Version 91
	•	Library updates;
	•

--- a/src/locales/en-messages.json
+++ b/src/locales/en-messages.json
@@ -195,6 +195,10 @@
         "message": "Standard",
         "description": "This option suggests a reply to an email ensuring a standard tone of voice."
     },
+    "mailExplain": {
+        "message": "Explain",
+        "description": "Menu option to explain the content of an email or a portion of it."
+    },
     "mailSummarize": {
         "message": "Summarize",
         "description": "Menu option to summarize the content of an email or a portion of it."
@@ -402,6 +406,10 @@
     "options.openai.text2speech.audioQuality.tts1hd": {
         "message": "Higher quality",
         "description": "Description of higher-quality model, but without guaranteed low latency."
+    },
+    "options.openai.text2speech.audioQuality.ttsgpt4omini": {
+        "message": "Powered by GPT-4o mini",
+        "description": "Description of model powered by GPT-4o mini."
     },
     "options.openai.text2speech.speed": {
         "message": "Speed* (<span class=\"monospace\"></span>x)",
