--- a/src/locales/it-messages.json
+++ b/src/locales/it-messages.json
@@ -349,5 +349,8 @@
     },
     "options.xai.apiKey.description": {
         "message": "Vai sul sito <a href=\"https://console.x.ai\">xAI console</a> per recuperare o creare una chiave."
+    },
+    "options.xai.model": {
+        "message": "Modello*"
     }
 }
