Ollama email Inference on AI support introduces a new option "Review Code" is added that can provide review comments for the code present in mail chain This Review Code has three mode(s) of review style   * Detailed   - Comprehensive line-by-line review including rationale, edge cases, and improvement suggestions.   * High Level - Abstracts the summary focusing on design, architecture decisions, and general correctness.   * Concise    - To-the-point brief review that summarizes key issues and without verbosity.
Signed-off-by: Priya A <priyama2@in.ibm.com>

--- a/src/locales/en-messages.json
+++ b/src/locales/en-messages.json
@@ -155,6 +155,22 @@
         "message": "Standard",
         "description": "This option rephrases the input text ensuring a standard tone of voice."
     },
+    "mailReviewCode": {
+        "message": "Review Code",
+        "description": "This option suggests code review options"
+    },
+    "mailReviewCode.detailed": {
+        "message": "Detailed Review",
+        "description": "Detailed code review"
+    },
+    "mailReviewCode.highLevel": {
+        "message": "High-Level Review",
+        "description": "High-level summary code review"
+    },
+    "mailReviewCode.concise": {
+        "message": "Concise Review",
+        "description": "Concise style code review"
+    },
     "mailSuggestImprovements": {
         "message": "Suggest improvements",
         "description": "This option suggest improvements to an email."
