--- a/src/locales/en-messages.json
+++ b/src/locales/en-messages.json
@@ -155,6 +155,18 @@
         "message": "Standard",
         "description": "This option rephrases the input text ensuring a standard tone of voice."
     },
+    "mailReviewCode.detailed": {
+        "message": "Detailed Review",
+        "description": "Detailed code review"
+    },
+    "mailReviewCode.highLevel": {
+        "message": "High-Level Review",
+        "description": "High-level summary code review"
+    },
+    "mailReviewCode.concise": {
+        "message": "Concise Review",
+        "description": "Concise style code review"
+    },
     "mailSuggestImprovements": {
         "message": "Suggest improvements",
         "description": "This option suggest improvements to an email."
